--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_ca.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_ca.arb
@@ -5,8 +5,8 @@
   "ok": "D'acord",
   "yes": "Sí",
   "no": "No",
-  "cancel": "Cancel·lar",
-  "textContinue": "Continuar",
+  "cancel": "Cancel·la",
+  "textContinue": "Continua",
   "alertServerErrorTitle": "Vaja!",
   "alertServerErrorText": "Alguna cosa no ens està funcionant bé. Si us plau, intenta-ho més tard.",
   "skip": "Omet",
@@ -16,13 +16,13 @@
   "splashPageNoInternet": "Sembla que no tens connexió a Internet",
   "@@LanguagePage": "LanguagePage",
   "languagePageTitle": "Continuem en català? :)",
-  "languagePageSubtitle": "Més endavant podràs canviar-ho a la pàgina de configuració.",
+  "languagePageSubtitle": "Pots canviar-ho més endavant des de la pàgina de configuració.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "Si aquest colom tan bufó no t'ajuda a votar al juny, res ho farà.",
-  "entranceTitle2": "Fes \"swipe\" amb la teva opinió sobre els temes que t'importen.",
-  "entranceTitle3": "Descobreix el teu matx i una orientació de qui votar a les eleccions.",
-  "entranceMatchesFoundQuote": "{count} 'match' trobats en les darreres 24 hores",
-  "entranceStartButton": "Començar Palumba",
+  "entranceTitle1": "Si aquest colom tan bufó no t'ajuda a votar al juny, res no ho farà.",
+  "entranceTitle2": "Fes lliscar el dit per donar la teva opinió sobre els temes que t'importen.",
+  "entranceTitle3": "Descobreix amb qui has fet match i obtén una orientació sobre qui votar a les eleccions.",
+  "entranceMatchesFoundQuote": "{count} matches trobats en les últimes 24 hores",
+  "entranceStartButton": "Inicia Palumba",
   "@@OnBoardingPage": "OnBoardingPage",
   "hungary": "Hongria",
   "denmark": "Dinamarca",
@@ -32,47 +32,47 @@
   "poland": "Polònia",
   "romania": "Romania",
   "sweden": "Suècia",
-  "onBoardingStep1Title": "On votareu?",
+  "onBoardingStep1Title": "On votaràs?",
   "onBoardingStep1Subtitle": "No ho sé",
   "onBoardingStep2Title": "La meva edat",
-  "onBoardingStep3Title": "El meu gènere és",
+  "onBoardingStep3Title": "M'identifico com a",
   "onBoardingStep3Option1": "Dona",
   "onBoardingStep3Option2": "Home",
   "onBoardingStep3Option3": "Gènere-fluid",
   "onBoardingStep3Option4": "No binari",
   "onBoardingStep3Option5": "Altres",
-  "onBoardingNotAnswerButton": "Prefereix-ho no dir-ho",
+  "onBoardingNotAnswerButton": "Prefereixo no dir-ho",
   "onBoardingCardQuestion": "No tinc ni idea de qui votar a les eleccions europees del 2024",
   "onBoardingLastStepTitle": "Llisca en funció del teu grau d'acord",
   "@@LoadingResultsPage": "LoadingResultsPage",
   "loadingResultsPageTitle1": "Els teus resultats personalitzats estan en camí :)",
   "loadingResultsPageTitle2": "Això serà més ràpid que aconseguir entrades per Taylor Swift 👀 ",
-  "loadingResultsPageTitle3": "Trobar coincidències amb llistes de candidats a {country} 🔍",
-  "loadingResultsPageTitle4": "Quasi preparat, una darrera comprovació...",
+  "loadingResultsPageTitle3": "Cercant coincidències amb les llistes de candidats a {country} 🔍",
+  "loadingResultsPageTitle4": "Quasi enllestit, una darrera comprovació...",
   "@@ResultsPage": "ResultsPage",
-  "resultsPage1Title": "T'hem trobat un 'match'!",
+  "resultsPage1Title": "Un match i molt més 👉👈",
   "resultsPage1Text": "A les pantalles següents descobriràs amb quin grup del Parlament de la UE ets més compatible, la correspondència amb les llistes locals del teu país per votar al juny i, fins i tot, algunes coses addicionals que hem descobert a partir de les teves respostes 😌",
-  "resultsPage1Button": "Clic per a continuar",
+  "resultsPage1Button": "Clica per continuar",
   "resultsPage2_1Title": "Mira, entre",
   "resultsPage2_2Title": "i jo, hi ha una mena de Love Story (EU's Version)",
   "resultsPage3Title": "La teva compatibilitat amb els grups del Parlament Europeu",
-  "resultsPage4TitleTop": "Pro-integració UE",
-  "resultsPage4TitleBottom": "Anti-integració UE",
+  "resultsPage4TitleTop": "Prointegració de la UE",
+  "resultsPage4TitleBottom": "Antiintegració de la UE",
   "resultsPage4TitleLeft": "Esquerra",
   "resultsPage4TitleRight": "Dreta",
   "resultsPage4TitleUserHere": "It's me, hi!",
-  "resultsPage5Title": "D'acord, és genial saber quin grup et porta...",
-  "resultsPage5Topic1": "Environmental issues",
-  "resultsPage5Topic2": "Human & Social Rights",
-  "resultsPage5Topic3": "Economic intervention",
-  "resultsPage6_1Title": "Val, està guai saber amb quin grup encaixo...",
-  "resultsPage6_2Title": "Però a les eleccions europees, votem per a candidatures locals",
-  "resultsPage6Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage7Title": "Aquestes són les llistes de candidats locals que coincideixen al vostre país",
+  "resultsPage5Title": "I sobre temes més concrets, quin grup del Parlament Europeu coincideix més amb mi?",
+  "resultsPage5Topic1": "Medi ambient",
+  "resultsPage5Topic2": "DD. HH. i drets socials",
+  "resultsPage5Topic3": "Intervencionisme econòmic",
+  "resultsPage6_1Title": "Entesos, està guai saber amb quin grup encaixo més...",
+  "resultsPage6_2Title": "Però a les eleccions europees, votem a candidatures locals",
+  "resultsPage6Text": "A les pantalles següents descobriràs les candidatures locals al teu país que més probablement s'uniran al teu match.",
+  "resultsPage7Title": "Candidatures a {country} més alineades amb {group}",
   "resultsPage7Disclaimer": "No estan en cap ordre en concret",
   "resultsPage7NoLocalCandidates": "No s'ha trobat cap partit polític local a {country}",
   "resultsPage8_1Text": "En {topic}, et decantes un {percentage}% cap a",
-  "resultsPage8_2Text": "Active Climate Action 🌱😌",
+  "resultsPage8_2Text": "l'acció climàtica proactiva 🌱😌",
   "resultsPage8Help": "Ets un lluitador climàtic! Creus que donar resposta a la crisi climàtica requereix d'acció col·lectiva, amb tothom prioritzant el tema. No sap gens de greu que la UE reguli les empreses per a fer-ho possible. Al final, de què serveix el creixement econòmic si el planeta es torna inhabitable?",
   "resultsPage9Help": "Fes clic a les cartes per barrejar-les",
   "resultsPage9Text1": "Les eleccions van de molts temes, però hi ha una cosa que realment",
@@ -80,7 +80,7 @@
   "resultsPage10Title": "Una notificació quan toqui anar a votar?",
   "resultsPage10NopButton": "Nope, gràcies!",
   "resultsPage10YesButton": "Síííííí",
-  "resultsShare": "Comparteix",
+  "resultsShare": "Comparteix (coming soon ⏳)",
   "@HomePage": "HomePage",
   "homePageMatchesFoundQuote": "{count} 'matches' trobats en les últimes 24 hores",
   "homePageBackToTest": "Tornar al test",
@@ -100,6 +100,6 @@
   "settingsPageSubtitle3": "Soci acadèmic",
   "settingsPageSubtitle4": "Socis institucionals nacionals",
   "settingsPageSubtitle5": "Proveïdors del servei",
-  "settingsPageShareButtonText": "Compartir",
+  "settingsPageShareButtonText": "Compartir (pròximament ⏳)",
   "settingsPagePrivacyPolicy": "Política de Privacitat"
 }
