--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_it.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_it.arb
@@ -2,95 +2,104 @@
   "@@locale": "it",
   "appName": "Palumba EU",
   "shortAppName": "Palumba",
-  "ok": "D'acord",
-  "yes": "Sí",
+  "ok": "Ok",
+  "yes": "Sì",
   "no": "No",
-  "cancel": "Cancel·lar",
-  "textContinue": "Continuar",
-  "alertServerErrorTitle": "Vaja!",
-  "alertServerErrorText": "Alguna cosa ha anat malament al nostre costat. Siusplau, intenta-ho més tard.",
-  "skip": "Omet",
-  "neutral": "Neutral",
+  "cancel": "Cancella",
+  "textContinue": "Continua",
+  "alertServerErrorTitle": "Ops!",
+  "alertServerErrorText": "Qualcosa è andato storto. Per favore riprova più tardi.",
+  "skip": "Salta",
+  "neutral": "Neutrale",
   "faq": "FAQ",
+  "@@SplashPage": "SplashPage",
+  "splashPageNoInternet": "Sembra che tu non abbia una connessione internet",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Continuem en català? :)",
-  "languagePageSubtitle": "Això es pot canviar més endavant a la configuració.",
+  "languagePageTitle": "Continuiamo in inglese? :)",
+  "languagePageSubtitle": "Potrai cambiare in seguito nelle impostazioni.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "Benvinguts a la Beta exclusiva de Palumba",
-  "entranceTitle2": "Si aquest colom tan bufó no t'ajuda a votar al juny, res ho farà",
-  "entranceTitle3": "Prepara't per difondre l'app massivament el 9 de maig",
-  "entranceMatchesFoundQuote": "{count}'matches' trobats en les últimes 24 hores",
-  "entranceStartButton": "Començar Palumba",
+  "entranceTitle1": "Se questo piccione carino non ti aiuterà a votare a giugno, nient'altro lo farà.",
+  "entranceTitle2": "Scorri sull'opinione che più ti interessa.",
+  "entranceTitle3": "Trova il tuo abbinamento e l'orientamento per cui votare alle elezioni.",
+  "entranceMatchesFoundQuote": "{count} abbinamenti trovati nelle ultime 24 ore",
+  "entranceStartButton": "Avvia Palumba",
   "@@OnBoardingPage": "OnBoardingPage",
-  "hungary": "Hongria",
-  "denmark": "Dinamarca",
-  "germany": "Alemanya",
-  "spain": "Espanya",
-  "france": "França",
-  "poland": "Polònia",
+  "hungary": "Ungheria",
+  "denmark": "Danimarca",
+  "germany": "Germania",
+  "spain": "Spagna",
+  "france": "Francia",
+  "poland": "Polonia",
   "romania": "Romania",
-  "sweden": "Suècia",
-  "onBoardingStep1Title": "On votareu?",
-  "onBoardingStep1Subtitle": "No ho sé",
-  "onBoardingStep2Title": "La meva edat",
-  "onBoardingStep3Title": "El meu gènere és",
-  "onBoardingStep3Option1": "Dona",
-  "onBoardingStep3Option2": "Home",
-  "onBoardingStep3Option3": "Gènere-fluid",
-  "onBoardingStep3Option4": "No binari",
-  "onBoardingStep3Option5": "Altres",
-  "onBoardingNotAnswerButton": "Prefereix-ho no dir-ho",
-  "onBoardingCardQuestion": "No tinc ni idea de qui votar a les eleccions europees del 2024",
-  "onBoardingLastStepTitle": "Llisca en funció del teu grau d'acord",
+  "sweden": "Svezia",
+  "onBoardingStep1Title": "Da dove voterai?",
+  "onBoardingStep1Subtitle": "Non lo so",
+  "onBoardingStep2Title": "La mia età",
+  "onBoardingStep3Title": "Mi identifico come",
+  "onBoardingStep3Option1": "Donna",
+  "onBoardingStep3Option2": "Uomo",
+  "onBoardingStep3Option3": "Gender fluid",
+  "onBoardingStep3Option4": "Non binario",
+  "onBoardingStep3Option5": "Altro",
+  "onBoardingNotAnswerButton": "Preferisco non rispondere",
+  "onBoardingCardQuestion": "Non ho alcuna idea per chi votare alle Elezioni Europee 2024",
+  "onBoardingLastStepTitle": "Scorri in base a quanto sei d'accordo",
   "@@LoadingResultsPage": "LoadingResultsPage",
-  "loadingResultsPageTitle1": "Els teus resultats personalitzats estan en camí :)",
-  "loadingResultsPageTitle2": "Això serà més ràpid que aconseguir entrades per Taylor Swift 👀 ",
-  "loadingResultsPageTitle3": "Trobar coincidències amb llistes de candidats a {country} 🔍",
-  "loadingResultsPageTitle4": "Quasi preparat, una darrera comprovació...",
+  "loadingResultsPageTitle1": "I tuoi risultati sono in arrivo :)",
+  "loadingResultsPageTitle2": "Dovrebbe essere più veloce che prendere dei biglietti per Taylor Swift 👀 ",
+  "loadingResultsPageTitle3": "Trova gli abbinamenti con le liste candidate in {country}  🔍",
+  "loadingResultsPageTitle4": "Quasi pronti, un ultimo controllo...",
   "@@ResultsPage": "ResultsPage",
-  "resultsPage1Title": "T'hem trobat un 'match'!",
-  "resultsPage1Text": "A les següents pantalles, descobrireu el vostre grup més compatible al Parlament de la UE, les llistes locals coincidents per votar al juny al vostre país, i fins i tot hem trobat algunes coses addicionals basades en les vostres respostes 😌",
-  "resultsLabelEmoji": "😍❤️‍🔥💘",
-  "resultsShare": "Comparteix (coming soon ⏳)",
-  "resultsPage2Title": "i tu, realment és una Love Story (EU's Version)",
-  "resultsPage2FirstText": "Esteu d'acord en un ",
-  "resultsPage2LastText": "de totes les idees que has valorat.",
-  "resultsPage3Title": "La teva compatibilitat amb els grups del Parlament Europeu",
-  "resultsPage5Title": "D'acord, és genial saber quin grup et porta...",
-  "resultsPage5Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage4TitleTop": "Pro-integració UE",
-  "resultsPage4TitleBottom": "Anti-integració UE",
-  "resultsPage4TitleLeft": "Esquerra",
-  "resultsPage4TitleRight": "Dreta",
-  "resultsPage4TitleUserHere": "Ets tu!",
-  "resultsPage6Title": "Però a les eleccions de la UE, voteu per una llista local",
-  "resultsPage6Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage7Title": "Aquestes són les llistes de candidats locals que coincideixen al vostre país",
-  "resultsPage7Disclaimer": "No estan en cap ordre en concret",
-  "resultsPage7NoLocalCandidates": "No s'ha trobat cap partit polític local a {country}",
-  "resultsPage8Title": "Vols rebre una notificació quan sigui el moment de votar?",
-  "resultsPage8NopButton": "No gràcies!",
-  "resultsPage8YesButton": "Síííí",
-  "resultsSocialShareData": "Me and {party} agreed on {percentage}% of all the statements you swiped on. Find out your match at palumba.eu",
+  "resultsPage1Title": "Un match e tanto altro 👉👈",
+  "resultsPage1Text": "Nelle prossime schermate, scoprirai il gruppo del Parlamento Europeo con cui sei più compatibile, le liste locali da votare a giugno nel tuo paese e abbiamo anche trovato un paio di cose extra in base alle tue risposte  😌",
+  "resultsPage1Button": "Premi per continuare",
+  "resultsPage2_1Title": "Onestamente, tra il",
+  "resultsPage2_2Title": "e me, è una Love Story (EU's Version)",
+  "resultsPage3Title": "Quanto mi sono vicini i Gruppi Parlamentari Europei",
+  "resultsPage4TitleTop": "Pro Integrazione Europea",
+  "resultsPage4TitleBottom": "Contro l'Integrazione Europea",
+  "resultsPage4TitleLeft": "Sinistra",
+  "resultsPage4TitleRight": "Destra",
+  "resultsPage4TitleUserHere": "It's me, hi!",
+  "resultsPage5Title": "Su argomenti specifici, quale Gruppo Parlamentare Europeo mi è più vicino?",
+  "resultsPage5Topic1": "Questioni ambientali",
+  "resultsPage5Topic2": "Diritti Umani e Sociali",
+  "resultsPage5Topic3": "Intervento economico",
+  "resultsPage6_1Title": "Ok, è bello sapere quale gruppo mi è più vicino...",
+  "resultsPage6_2Title": "Ma alle Elezioni Europee, si vota per una lista locale",
+  "resultsPage6Text": "Nelle prossime schermate, scoprirai le liste candidate nel tuo paese che potrebbero esserti più vicine.",
+  "resultsPage7Title": "I candidati in {country} più allineati con {group}",
+  "resultsPage7Disclaimer": "Non in un ordine particolare.",
+  "resultsPage7NoLocalCandidates": "Nessun partito trovato in {country}",
+  "resultsPage8_1Text": "Su {topic}, sei {percentage} in più in",
+  "resultsPage8_2Text": "Azione Climatica Attiva",
+  "resultsPage8Help": "You are a climate change fighter! You believe that tackling the climate crisis requires collective action, with everyone making it a top priority. You do not mind the EU regulating companies to that end. After all, what use is economic growth if the planet becomes inhabitable?",
+  "resultsPage9Help": "Clicca sulle carte per mescolare",
+  "resultsPage9Text1": "Le elezioni hanno diversi argomenti, ma ce n'è uno che veramente",
+  "resultsPage9Text2": "Mi appartiene",
+  "resultsPage10Title": "Vuoi ricevere una notifica per quando sarà tempo di andare a votare?",
+  "resultsPage10NopButton": "No grazie!",
+  "resultsPage10YesButton": "Sììììì",
+  "resultsShare": "Condividi",
   "@HomePage": "HomePage",
-  "homePageMatchesFoundQuote": "{count} 'matches' trobats en les últimes 24 hores",
-  "homePageBackToTest": "Tornar al test",
-  "homePageMyResults": "Els meus resultats",
-  "homePageStartButton": "Comença un nou test",
+  "homePageMatchesFoundQuote": "{count} match trovati nelle ultime 24 ore",
+  "homePageBackToTest": "Torna al test",
+  "homePageMyResults": "I miei risultati",
+  "homePageStartButton": "Inizia un nuovo test",
   "@@SettingsPage": "SettingsPage",
-  "settingsPageTitleLanguage": "Language",
-  "settingsPageSubtitleLanguage": "Prefereixo utilitzar l'app en",
-  "settingsPageTextLanguage": "Per canviar l'idioma, fes clic sobre l'actual",
-  "settingsPageTitleAbout": "Sobre nosaltres",
-  "settingsPageTextAbout": "Palumba no és una empresa, ni un partit polític, ni un govern. Som una associació independent sense ànim de lucre de més de 120 joves 🐦 d'arreu d'Europa que es van trobar l'estiu passat i van començar a crear aquesta app. Tenim un objectiu: ajudar-te a entendre millor com funcionen les eleccions europees i quines candidatures encaixen amb les vostres idees, perquè puguis votar amb més confiança a les persones que donen suport a les teves prioritats. El nostre algorisme és de codi obert, un consell científic de politòlegs ha revisat les frases en què fas \"swipe\" i les teves dades estan taaan encriptades que no tenim manera d'identificar-te ni de rebot :)",
-  "settingsPageTitleAssociation": "L'Associació",
+  "settingsPageTitleLanguage": "Lingua",
+  "settingsPageSubtitleLanguage": "Preferisco usare quest'app in",
+  "settingsPageTextLanguage": "Per cambiare la lingua, premi su quella attuale",
+  "settingsPageTitleAbout": "Su di noi",
+  "settingsPageTextAbout": "Palumba is not a company, not a political party, not a government. We’re an independent non-profit association of 120+ young people 🐦 from all over Europe who got together last summer and started crafting this app. We have one goal: helping you understand better how the European Elections work and which candidate lists could match your ideas, so you can vote more confidently for people who support your priorities. Our algorithm is open-source, the statements you swipe on were reviewed by political scientists, and your data is sooo encrypted that we have no way to ever identify you :)",
+  "settingsPageTitleAssociation": "L'associazione",
   "settingsPageTitlePartners": "Partners",
-  "settingsPageTextPartners": "És important que sàpigues que els Partners no tenen cap poder de decisió editorial sobre els continguts de l'app, que és una iniciativa apartidista amb un objectiu clar: ajudar-te a entendre quines opcions polítiques recolzen les teves opinions a nivell europeu i nacional.",
-  "settingsPageSubtitle1": "Main Sponsors",
-  "settingsPageSubtitle2": "European Partners",
-  "settingsPageSubtitle3": "Academic Partner",
-  "settingsPageSubtitle4": "National Institutional Partners",
+  "settingsPageTextPartners": "Important to tell you that partners have no editorial power on the content of the app, which remains a non-partisan initiative with a clear goal: helping you understand who supports your opinions at the european and national levels.",
+  "settingsPageSubtitle1": "Sponsor principali",
+  "settingsPageSubtitle2": "Partners Europei",
+  "settingsPageSubtitle3": "Partner accademico",
+  "settingsPageSubtitle4": "Partners Istituzionali Nazionali",
   "settingsPageSubtitle5": "Service Providers",
-  "settingsPageShareButtonText": "Compartir (coming soon ⏳)",
-  "settingsPagePrivacyPolicy": "Política de Privacitat"
+  "settingsPageShareButtonText": "Condividi",
+  "settingsPagePrivacyPolicy": "Protezione dati"
 }
