--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_lv.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_lv.arb
@@ -2,95 +2,104 @@
   "@@locale": "lv",
   "appName": "Palumba EU",
   "shortAppName": "Palumba",
-  "ok": "D'acord",
-  "yes": "Sí",
+  "ok": "Ok",
+  "yes": "Yes",
   "no": "No",
-  "cancel": "Cancel·lar",
-  "textContinue": "Continuar",
-  "alertServerErrorTitle": "Vaja!",
-  "alertServerErrorText": "Alguna cosa ha anat malament al nostre costat. Siusplau, intenta-ho més tard.",
-  "skip": "Omet",
+  "cancel": "Cancel",
+  "textContinue": "Continue",
+  "alertServerErrorTitle": "Ops!",
+  "alertServerErrorText": "Something has gone wrong on our side. Please try again later.",
+  "skip": "Skip",
   "neutral": "Neutral",
   "faq": "FAQ",
+  "@@SplashPage": "SplashPage",
+  "splashPageNoInternet": "It looks like you don't have internet connection",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Continuem en català? :)",
-  "languagePageSubtitle": "Això es pot canviar més endavant a la configuració.",
+  "languagePageTitle": "Let’s continue in English? :)",
+  "languagePageSubtitle": "This can be changed later in settings.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "Benvinguts a la Beta exclusiva de Palumba",
-  "entranceTitle2": "Si aquest colom tan bufó no t'ajuda a votar al juny, res ho farà",
-  "entranceTitle3": "Prepara't per difondre l'app massivament el 9 de maig",
-  "entranceMatchesFoundQuote": "{count}'matches' trobats en les últimes 24 hores",
-  "entranceStartButton": "Començar Palumba",
+  "entranceTitle1": "If this cute pigeon can’t help you vote in June, nothing will.",
+  "entranceTitle2": "Swipe your opinion on topics that matter to you.",
+  "entranceTitle3": "Find out your match and an orientation for who to vote for at the Elections.",
+  "entranceMatchesFoundQuote": "{count} matches found in the last 24h",
+  "entranceStartButton": "Start Palumba",
   "@@OnBoardingPage": "OnBoardingPage",
-  "hungary": "Hongria",
-  "denmark": "Dinamarca",
-  "germany": "Alemanya",
-  "spain": "Espanya",
-  "france": "França",
-  "poland": "Polònia",
+  "hungary": "Hungary",
+  "denmark": "Denmark",
+  "germany": "Germany",
+  "spain": "Spain",
+  "france": "France",
+  "poland": "Poland",
   "romania": "Romania",
-  "sweden": "Suècia",
-  "onBoardingStep1Title": "On votareu?",
-  "onBoardingStep1Subtitle": "No ho sé",
-  "onBoardingStep2Title": "La meva edat",
-  "onBoardingStep3Title": "El meu gènere és",
-  "onBoardingStep3Option1": "Dona",
-  "onBoardingStep3Option2": "Home",
-  "onBoardingStep3Option3": "Gènere-fluid",
-  "onBoardingStep3Option4": "No binari",
-  "onBoardingStep3Option5": "Altres",
-  "onBoardingNotAnswerButton": "Prefereix-ho no dir-ho",
-  "onBoardingCardQuestion": "No tinc ni idea de qui votar a les eleccions europees del 2024",
-  "onBoardingLastStepTitle": "Llisca en funció del teu grau d'acord",
+  "sweden": "Sweden",
+  "onBoardingStep1Title": "Where will you vote?",
+  "onBoardingStep1Subtitle": "I don't know",
+  "onBoardingStep2Title": "My age",
+  "onBoardingStep3Title": "I identify as",
+  "onBoardingStep3Option1": "Woman",
+  "onBoardingStep3Option2": "Man",
+  "onBoardingStep3Option3": "Gender-fluid",
+  "onBoardingStep3Option4": "Non-binary",
+  "onBoardingStep3Option5": "Else",
+  "onBoardingNotAnswerButton": "Prefer not to say",
+  "onBoardingCardQuestion": "I have no clue who to vote for at the 2024 European Elections",
+  "onBoardingLastStepTitle": "Swipe according to your agreement",
   "@@LoadingResultsPage": "LoadingResultsPage",
-  "loadingResultsPageTitle1": "Els teus resultats personalitzats estan en camí :)",
-  "loadingResultsPageTitle2": "Això serà més ràpid que aconseguir entrades per Taylor Swift 👀 ",
-  "loadingResultsPageTitle3": "Trobar coincidències amb llistes de candidats a {country} 🔍",
-  "loadingResultsPageTitle4": "Quasi preparat, una darrera comprovació...",
+  "loadingResultsPageTitle1": "Your personalised results are on their way :)",
+  "loadingResultsPageTitle2": "This shall be quicker than getting Taylor Swift tickets 👀 ",
+  "loadingResultsPageTitle3": "Finding matches with candidates lists in {country}  🔍",
+  "loadingResultsPageTitle4": "Almost ready, one last check...",
   "@@ResultsPage": "ResultsPage",
-  "resultsPage1Title": "T'hem trobat un 'match'!",
-  "resultsPage1Text": "A les següents pantalles, descobrireu el vostre grup més compatible al Parlament de la UE, les llistes locals coincidents per votar al juny al vostre país, i fins i tot hem trobat algunes coses addicionals basades en les vostres respostes 😌",
-  "resultsLabelEmoji": "😍❤️‍🔥💘",
-  "resultsShare": "Comparteix (coming soon ⏳)",
-  "resultsPage2Title": "i tu, realment és una Love Story (EU's Version)",
-  "resultsPage2FirstText": "Esteu d'acord en un ",
-  "resultsPage2LastText": "de totes les idees que has valorat.",
-  "resultsPage3Title": "La teva compatibilitat amb els grups del Parlament Europeu",
-  "resultsPage5Title": "D'acord, és genial saber quin grup et porta...",
-  "resultsPage5Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage4TitleTop": "Pro-integració UE",
-  "resultsPage4TitleBottom": "Anti-integració UE",
-  "resultsPage4TitleLeft": "Esquerra",
-  "resultsPage4TitleRight": "Dreta",
-  "resultsPage4TitleUserHere": "Ets tu!",
-  "resultsPage6Title": "Però a les eleccions de la UE, voteu per una llista local",
-  "resultsPage6Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage7Title": "Aquestes són les llistes de candidats locals que coincideixen al vostre país",
-  "resultsPage7Disclaimer": "No estan en cap ordre en concret",
-  "resultsPage7NoLocalCandidates": "No s'ha trobat cap partit polític local a {country}",
-  "resultsPage8Title": "Vols rebre una notificació quan sigui el moment de votar?",
-  "resultsPage8NopButton": "No gràcies!",
-  "resultsPage8YesButton": "Síííí",
-  "resultsSocialShareData": "Me and {party} agreed on {percentage}% of all the statements you swiped on. Find out your match at palumba.eu",
+  "resultsPage1Title": "A match and much more 👉👈",
+  "resultsPage1Text": "In the next screens, you’ll discover your most compatible  Group at the EU Parliament, the matching Local lists to vote for in June in your country, and we even found a few extra things based on your answers 😌",
+  "resultsPage1Button": "Press to continue",
+  "resultsPage2_1Title": "Honestly, between the",
+  "resultsPage2_2Title": "and me, it’s kind of a Love Story (EU’s Version)",
+  "resultsPage3Title": "How close I am to European Parliament Groups",
+  "resultsPage4TitleTop": "Pro-EU Integration",
+  "resultsPage4TitleBottom": "Anti-EU Integration",
+  "resultsPage4TitleLeft": "Left",
+  "resultsPage4TitleRight": "Right",
+  "resultsPage4TitleUserHere": "It’s me, hi!",
+  "resultsPage5Title": "On more specific topics, which European Parliament Group am I closer to?",
+  "resultsPage5Topic1": "Environmental issues",
+  "resultsPage5Topic2": "Human & Social Rights",
+  "resultsPage5Topic3": "Economic intervention",
+  "resultsPage6_1Title": "Ok, it's cool knowing which group gets me...",
+  "resultsPage6_2Title": "But at the EU Elections, we vote for a local list",
+  "resultsPage6Text": "In the next screens, you’ll discover the candidate lists in your country  that are most likely to join your match.",
+  "resultsPage7Title": "The candidates in {country} most aligned with {group}",
+  "resultsPage7Disclaimer": "In no particular order.",
+  "resultsPage7NoLocalCandidates": "No local parties found in {country}",
+  "resultsPage8_1Text": "On {topic}, you’re {percentage}% more into",
+  "resultsPage8_2Text": "Active Climate Action 🌱😌",
+  "resultsPage8Help": "You are a climate change fighter! You believe that tackling the climate crisis requires collective action, with everyone making it a top priority. You do not mind the EU regulating companies to that end. After all, what use is economic growth if the planet becomes inhabitable?",
+  "resultsPage9Help": "Click on the cards to shuffle",
+  "resultsPage9Text1": "Elections are about many topics, but there’s one thing that really",
+  "resultsPage9Text2": "Belongs With Me 🫡",
+  "resultsPage10Title": "A notification when it’s time to go vote?",
+  "resultsPage10NopButton": "No thanks!",
+  "resultsPage10YesButton": "Yesssss",
+  "resultsShare": "Share",
   "@HomePage": "HomePage",
-  "homePageMatchesFoundQuote": "{count} 'matches' trobats en les últimes 24 hores",
-  "homePageBackToTest": "Tornar al test",
-  "homePageMyResults": "Els meus resultats",
-  "homePageStartButton": "Comença un nou test",
+  "homePageMatchesFoundQuote": "{count} matches found in the last 24h",
+  "homePageBackToTest": "Back to the test",
+  "homePageMyResults": "My results",
+  "homePageStartButton": "Start a new test",
   "@@SettingsPage": "SettingsPage",
   "settingsPageTitleLanguage": "Language",
-  "settingsPageSubtitleLanguage": "Prefereixo utilitzar l'app en",
-  "settingsPageTextLanguage": "Per canviar l'idioma, fes clic sobre l'actual",
-  "settingsPageTitleAbout": "Sobre nosaltres",
-  "settingsPageTextAbout": "Palumba no és una empresa, ni un partit polític, ni un govern. Som una associació independent sense ànim de lucre de més de 120 joves 🐦 d'arreu d'Europa que es van trobar l'estiu passat i van començar a crear aquesta app. Tenim un objectiu: ajudar-te a entendre millor com funcionen les eleccions europees i quines candidatures encaixen amb les vostres idees, perquè puguis votar amb més confiança a les persones que donen suport a les teves prioritats. El nostre algorisme és de codi obert, un consell científic de politòlegs ha revisat les frases en què fas \"swipe\" i les teves dades estan taaan encriptades que no tenim manera d'identificar-te ni de rebot :)",
-  "settingsPageTitleAssociation": "L'Associació",
+  "settingsPageSubtitleLanguage": "I prefer to use this app in",
+  "settingsPageTextLanguage": "To change the language, click on the current one",
+  "settingsPageTitleAbout": "About",
+  "settingsPageTextAbout": "Palumba is not a company, not a political party, not a government. We’re an independent non-profit association of 120+ young people 🐦 from all over Europe who got together last summer and started crafting this app. We have one goal: helping you understand better how the European Elections work and which candidate lists could match your ideas, so you can vote more confidently for people who support your priorities. Our algorithm is open-source, the statements you swipe on were reviewed by political scientists, and your data is sooo encrypted that we have no way to ever identify you :)",
+  "settingsPageTitleAssociation": "The association",
   "settingsPageTitlePartners": "Partners",
-  "settingsPageTextPartners": "És important que sàpigues que els Partners no tenen cap poder de decisió editorial sobre els continguts de l'app, que és una iniciativa apartidista amb un objectiu clar: ajudar-te a entendre quines opcions polítiques recolzen les teves opinions a nivell europeu i nacional.",
+  "settingsPageTextPartners": "Important to tell you that partners have no editorial power on the content of the app, which remains a non-partisan initiative with a clear goal: helping you understand who supports your opinions at the european and national levels.",
   "settingsPageSubtitle1": "Main Sponsors",
   "settingsPageSubtitle2": "European Partners",
   "settingsPageSubtitle3": "Academic Partner",
   "settingsPageSubtitle4": "National Institutional Partners",
   "settingsPageSubtitle5": "Service Providers",
-  "settingsPageShareButtonText": "Compartir (coming soon ⏳)",
-  "settingsPagePrivacyPolicy": "Política de Privacitat"
+  "settingsPageShareButtonText": "Share",
+  "settingsPagePrivacyPolicy": "Data Protection"
 }
