--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_mt.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_mt.arb
@@ -2,95 +2,104 @@
   "@@locale": "mt",
   "appName": "Palumba EU",
   "shortAppName": "Palumba",
-  "ok": "D'acord",
-  "yes": "Sí",
-  "no": "No",
-  "cancel": "Cancel·lar",
-  "textContinue": "Continuar",
-  "alertServerErrorTitle": "Vaja!",
-  "alertServerErrorText": "Alguna cosa ha anat malament al nostre costat. Siusplau, intenta-ho més tard.",
-  "skip": "Omet",
-  "neutral": "Neutral",
-  "faq": "FAQ",
+  "ok": "Ok",
+  "yes": "Iva",
+  "no": "Le",
+  "cancel": "Tikkanċella",
+  "textContinue": "Kompli",
+  "alertServerErrorTitle": "Ops!",
+  "alertServerErrorText": "Xi ħaġa marret ħażin min-naħa tagħna. Jekk jogħġbok erġa pprova aktar tard.",
+  "skip": "Aqbeż",
+  "neutral": "Newtrali",
+  "faq": "Mistoqsijiet Komuni / FAQ",
+  "@@SplashPage": "SplashPage",
+  "splashPageNoInternet": "Jidher li m'għandekx konnessjoni tal-internet",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Continuem en català? :)",
-  "languagePageSubtitle": "Això es pot canviar més endavant a la configuració.",
+  "languagePageTitle": "Ejja nkomplu bil-Malti? :)",
+  "languagePageSubtitle": "Dan jista' jinbidel aktar tard fis-settings.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "Benvinguts a la Beta exclusiva de Palumba",
-  "entranceTitle2": "Si aquest colom tan bufó no t'ajuda a votar al juny, res ho farà",
-  "entranceTitle3": "Prepara't per difondre l'app massivament el 9 de maig",
-  "entranceMatchesFoundQuote": "{count}'matches' trobats en les últimes 24 hores",
-  "entranceStartButton": "Començar Palumba",
+  "entranceTitle1": "Jekk dan il-ħamiem ħelu ma jistax jgħinek tivvota f'Ġunju, xejn mhu se.",
+  "entranceTitle2": "Swipe l-opinjoni tiegħek dwar suġġetti li huma importanti għalik.",
+  "entranceTitle3": "Sib il-partita tiegħek u orjentazzjoni għal min tivvota fl-Elezzjonijiet.",
+  "entranceMatchesFoundQuote": "{count} partiti misjuba fl-ahhar 24h",
+  "entranceStartButton": "Bidu Palumba",
   "@@OnBoardingPage": "OnBoardingPage",
-  "hungary": "Hongria",
-  "denmark": "Dinamarca",
-  "germany": "Alemanya",
-  "spain": "Espanya",
-  "france": "França",
-  "poland": "Polònia",
-  "romania": "Romania",
-  "sweden": "Suècia",
-  "onBoardingStep1Title": "On votareu?",
-  "onBoardingStep1Subtitle": "No ho sé",
-  "onBoardingStep2Title": "La meva edat",
-  "onBoardingStep3Title": "El meu gènere és",
-  "onBoardingStep3Option1": "Dona",
-  "onBoardingStep3Option2": "Home",
-  "onBoardingStep3Option3": "Gènere-fluid",
-  "onBoardingStep3Option4": "No binari",
-  "onBoardingStep3Option5": "Altres",
-  "onBoardingNotAnswerButton": "Prefereix-ho no dir-ho",
-  "onBoardingCardQuestion": "No tinc ni idea de qui votar a les eleccions europees del 2024",
-  "onBoardingLastStepTitle": "Llisca en funció del teu grau d'acord",
+  "hungary": "I-Ungerija",
+  "denmark": "Id-Danimarka",
+  "germany": "Ġermanja",
+  "spain": "Spanja",
+  "france": "Franza",
+  "poland": "Il-Polonja",
+  "romania": "Ir-rumanija",
+  "sweden": "L-Isvezja",
+  "onBoardingStep1Title": "Fejn se tivvota?",
+  "onBoardingStep1Subtitle": "Ma nafx",
+  "onBoardingStep2Title": "Età tiegħi",
+  "onBoardingStep3Title": "Nidentifika bħala",
+  "onBoardingStep3Option1": "Mara",
+  "onBoardingStep3Option2": "Raġel",
+  "onBoardingStep3Option3": "Ġeneru fluwidu",
+  "onBoardingStep3Option4": "Mhux binarja",
+  "onBoardingStep3Option5": "Leħor (M) / Oħra (F)",
+  "onBoardingNotAnswerButton": "Nippreferi ma ngħidx",
+  "onBoardingCardQuestion": "M'għandi l-ebda ħjiel għal min nivvota fl-Elezzjonijiet Ewropej tal-2024",
+  "onBoardingLastStepTitle": "Swipe skond il-qbil tiegħek",
   "@@LoadingResultsPage": "LoadingResultsPage",
-  "loadingResultsPageTitle1": "Els teus resultats personalitzats estan en camí :)",
-  "loadingResultsPageTitle2": "Això serà més ràpid que aconseguir entrades per Taylor Swift 👀 ",
-  "loadingResultsPageTitle3": "Trobar coincidències amb llistes de candidats a {country} 🔍",
-  "loadingResultsPageTitle4": "Quasi preparat, una darrera comprovació...",
+  "loadingResultsPageTitle1": "Ir-riżultati personalizzati tiegħek qegħdin fi triqthom :)",
+  "loadingResultsPageTitle2": "Dan għandu jkun aktar mgħaġġel milli tikseb biljetti ta' Taylor Swift 👀 ",
+  "loadingResultsPageTitle3": "Tfittxija ta' logħbiet mal-listi ta' kandidati fl- {country}  🔍",
+  "loadingResultsPageTitle4": "Kważi lest,<br> l-aħħar kontroll...",
   "@@ResultsPage": "ResultsPage",
-  "resultsPage1Title": "T'hem trobat un 'match'!",
-  "resultsPage1Text": "A les següents pantalles, descobrireu el vostre grup més compatible al Parlament de la UE, les llistes locals coincidents per votar al juny al vostre país, i fins i tot hem trobat algunes coses addicionals basades en les vostres respostes 😌",
-  "resultsLabelEmoji": "😍❤️‍🔥💘",
-  "resultsShare": "Comparteix (coming soon ⏳)",
-  "resultsPage2Title": "i tu, realment és una Love Story (EU's Version)",
-  "resultsPage2FirstText": "Esteu d'acord en un ",
-  "resultsPage2LastText": "de totes les idees que has valorat.",
-  "resultsPage3Title": "La teva compatibilitat amb els grups del Parlament Europeu",
-  "resultsPage5Title": "D'acord, és genial saber quin grup et porta...",
-  "resultsPage5Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage4TitleTop": "Pro-integració UE",
-  "resultsPage4TitleBottom": "Anti-integració UE",
-  "resultsPage4TitleLeft": "Esquerra",
-  "resultsPage4TitleRight": "Dreta",
-  "resultsPage4TitleUserHere": "Ets tu!",
-  "resultsPage6Title": "Però a les eleccions de la UE, voteu per una llista local",
-  "resultsPage6Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage7Title": "Aquestes són les llistes de candidats locals que coincideixen al vostre país",
-  "resultsPage7Disclaimer": "No estan en cap ordre en concret",
-  "resultsPage7NoLocalCandidates": "No s'ha trobat cap partit polític local a {country}",
-  "resultsPage8Title": "Vols rebre una notificació quan sigui el moment de votar?",
-  "resultsPage8NopButton": "No gràcies!",
-  "resultsPage8YesButton": "Síííí",
-  "resultsSocialShareData": "Me and {party} agreed on {percentage}% of all the statements you swiped on. Find out your match at palumba.eu",
+  "resultsPage1Title": "Taqbila u ħafna aktar 👉👈",
+  "resultsPage1Text": "Fl-iskrins li ġejjin ser tiskopri liem grupp tal-Parlament Ewropej hu l-aktar kompatibbli miegħek, sensiela ta’ kandidati lokali li tista’ tivvota għalihom f’pajjiżek f’Ġunju, u sibna wkoll punti oħrajn bbażati fuq it-tweġibiet tiegħek 😌",
+  "resultsPage1Button": "Agħfas biex tkompli",
+  "resultsPage2_1Title": "Onestament, bejn il-",
+  "resultsPage2_2Title": "u jien, hija tip ta' Storja ta' Mħabba (EU's Version)",
+  "resultsPage3Title": "Kemm jien qrib il-Gruppi tal-Parlament Ewropew",
+  "resultsPage4TitleTop": "Integrazzjoni favur l-UE",
+  "resultsPage4TitleBottom": "Integrazzjoni kontra l-UE",
+  "resultsPage4TitleLeft": "Xellug",
+  "resultsPage4TitleRight": "Dritt",
+  "resultsPage4TitleUserHere": "It's me, hi!",
+  "resultsPage5Title": "Dwar suġġetti aktar speċifiċi, liema Grupp tal-Parlament Ewropew jien eqreb?",
+  "resultsPage5Topic1": "Kwistjonijiet ambjentali",
+  "resultsPage5Topic2": "Drittijiet tal-Bniedem u Soċjali",
+  "resultsPage5Topic3": "Intervent ekonomiku",
+  "resultsPage6_1Title": "Ok, tajjeb li tkun taf liema grupp iġibni...",
+  "resultsPage6_2Title": "Iżda fl-Elezzjonijiet tal-UE, nivvutaw għal lista lokali",
+  "resultsPage6Text": "Fl-iskrins li jmiss, inti ser tiskopri l-listi ta' kandidati f'pajjiżek li huma l-aktar probabbli li jissieħbu fil-partita tiegħek.",
+  "resultsPage7Title": "Il-kandidati f'{country} l-aktar allinjati ma' {group}",
+  "resultsPage7Disclaimer": "Fl-ebda ordni partikolari.",
+  "resultsPage7NoLocalCandidates": "Ebda parti lokali misjuba f'{country}",
+  "resultsPage8_1Text": "Fuq {topic}, int {percentage}% aktar",
+  "resultsPage8_2Text": "Azzjoni Klimatika Attiva 🌱😌",
+  "resultsPage8Help": "Inti ġellied għat-tibdil fil-klima! Inti temmen li l-indirizzar tal-kriżi tal-klima teħtieġ azzjoni kollettiva, b'kulħadd jagħmilha prijorità ewlenija. Ma tiddejjaqx il-kumpaniji li jirregolaw l-UE għal dak il-għan. Wara kollox, x'jagħmel it-tkabbir ekonomiku jekk il-pjaneta ssir abitabbli?",
+  "resultsPage9Help": "Ikklikkja fuq il-karti biex tħawwad",
+  "resultsPage9Text1": "Elections are about many topics, but there’s one thing that really",
+  "resultsPage9Text2": "Jappartjeni Miegħi 🫡",
+  "resultsPage10Title": "Notifika meta wasal iż-żmien li tmur tivvota?",
+  "resultsPage10NopButton": "Le grazzi!",
+  "resultsPage10YesButton": "Ivaaaaa",
+  "resultsShare": "Ħlief",
   "@HomePage": "HomePage",
-  "homePageMatchesFoundQuote": "{count} 'matches' trobats en les últimes 24 hores",
-  "homePageBackToTest": "Tornar al test",
-  "homePageMyResults": "Els meus resultats",
-  "homePageStartButton": "Comença un nou test",
+  "homePageMatchesFoundQuote": "{count} logħbiet misjuba fl-aħħar 24 siegħa",
+  "homePageBackToTest": "Lura għat-test",
+  "homePageMyResults": "Ir-riżultati tiegħi",
+  "homePageStartButton": "Tibda test ġdid",
   "@@SettingsPage": "SettingsPage",
-  "settingsPageTitleLanguage": "Language",
-  "settingsPageSubtitleLanguage": "Prefereixo utilitzar l'app en",
-  "settingsPageTextLanguage": "Per canviar l'idioma, fes clic sobre l'actual",
-  "settingsPageTitleAbout": "Sobre nosaltres",
-  "settingsPageTextAbout": "Palumba no és una empresa, ni un partit polític, ni un govern. Som una associació independent sense ànim de lucre de més de 120 joves 🐦 d'arreu d'Europa que es van trobar l'estiu passat i van començar a crear aquesta app. Tenim un objectiu: ajudar-te a entendre millor com funcionen les eleccions europees i quines candidatures encaixen amb les vostres idees, perquè puguis votar amb més confiança a les persones que donen suport a les teves prioritats. El nostre algorisme és de codi obert, un consell científic de politòlegs ha revisat les frases en què fas \"swipe\" i les teves dades estan taaan encriptades que no tenim manera d'identificar-te ni de rebot :)",
-  "settingsPageTitleAssociation": "L'Associació",
-  "settingsPageTitlePartners": "Partners",
-  "settingsPageTextPartners": "És important que sàpigues que els Partners no tenen cap poder de decisió editorial sobre els continguts de l'app, que és una iniciativa apartidista amb un objectiu clar: ajudar-te a entendre quines opcions polítiques recolzen les teves opinions a nivell europeu i nacional.",
-  "settingsPageSubtitle1": "Main Sponsors",
-  "settingsPageSubtitle2": "European Partners",
-  "settingsPageSubtitle3": "Academic Partner",
-  "settingsPageSubtitle4": "National Institutional Partners",
-  "settingsPageSubtitle5": "Service Providers",
-  "settingsPageShareButtonText": "Compartir (coming soon ⏳)",
-  "settingsPagePrivacyPolicy": "Política de Privacitat"
+  "settingsPageTitleLanguage": "Lingwa",
+  "settingsPageSubtitleLanguage": "Nippreferi nuża din l-app fi",
+  "settingsPageTextLanguage": "Biex tibdel il-lingwa, ikklikkja fuq dik attwali",
+  "settingsPageTitleAbout": "Dwar",
+  "settingsPageTextAbout": "Palumba mhix kumpanija, mhux partit politiku, mhux gvern. Aħna assoċjazzjoni indipendenti mingħajr skop ta' qligħ ta' aktar minn 120+ żagħżugħ 🐦 minn madwar l-Ewropa kollha li ltaqgħu flimkien fis-sajf li għadda u bdew ifasslu din l-app. Għandna għan wieħed: ngħinuk tifhem aħjar kif jaħdmu l-Elezzjonijiet Ewropej u liema listi ta' kandidati jistgħu jaqblu mal-ideat tiegħek, sabiex tkun tista' tivvota b'aktar kunfidenza għal nies li jappoġġjaw il-prijoritajiet tiegħek. L-algoritmu tagħna huwa open source, id-dikjarazzjonijiet li tiskja fuqhom ġew riveduti minn xjenzati politiċi, u d-dejta tiegħek hija tant kriptata li m'għandna l-ebda mod kif qatt nidentifikawk :)",
+  "settingsPageTitleAssociation": "L-assoċjazzjoni",
+  "settingsPageTitlePartners": "Msieħba",
+  "settingsPageTextPartners": "Importanti li ngħidlek li l-imsieħba m'għandhom l-ebda setgħa editorjali fuq il-kontenut tal-app, li tibqa' inizjattiva mhux partiġġjana b'għan ċar: tgħinek tifhem min jappoġġja l-opinjonijiet tiegħek fil-livelli ewropej u nazzjonali.",
+  "settingsPageSubtitle1": "Sponsors Ewlenin",
+  "settingsPageSubtitle2": "Imsieħba Ewropej",
+  "settingsPageSubtitle3": "Imsieħeb Akkademiku",
+  "settingsPageSubtitle4": "Imsieħba Istituzzjonali Nazzjonali",
+  "settingsPageSubtitle5": "Fornituri tas-Servizz",
+  "settingsPageShareButtonText": "Aqsam",
+  "settingsPagePrivacyPolicy": "Politika privata"
 }
