--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_pl.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_pl.arb
@@ -2,95 +2,104 @@
   "@@locale": "pl",
   "appName": "Palumba EU",
   "shortAppName": "Palumba",
-  "ok": "D'acord",
-  "yes": "Sí",
-  "no": "No",
-  "cancel": "Cancel·lar",
-  "textContinue": "Continuar",
-  "alertServerErrorTitle": "Vaja!",
-  "alertServerErrorText": "Alguna cosa ha anat malament al nostre costat. Siusplau, intenta-ho més tard.",
-  "skip": "Omet",
-  "neutral": "Neutral",
+  "ok": "Ok",
+  "yes": "Tak",
+  "no": "Nie",
+  "cancel": "Anuluj",
+  "textContinue": "Dalej",
+  "alertServerErrorTitle": "Ups!",
+  "alertServerErrorText": "Coś poszło nie tak po naszej stronie. Spróbuj ponownie później.",
+  "skip": "Pomiń",
+  "neutral": "Nie mam zdania",
   "faq": "FAQ",
+  "@@SplashPage": "SplashPage",
+  "splashPageNoInternet": "Wygląda na to, że nie masz połączenia z internetem",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Continuem en català? :)",
-  "languagePageSubtitle": "Això es pot canviar més endavant a la configuració.",
+  "languagePageTitle": "Kontynuujmy po polsku? :)",
+  "languagePageSubtitle": "Możesz to zmienić później w ustawieniach.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "Benvinguts a la Beta exclusiva de Palumba",
-  "entranceTitle2": "Si aquest colom tan bufó no t'ajuda a votar al juny, res ho farà",
-  "entranceTitle3": "Prepara't per difondre l'app massivament el 9 de maig",
-  "entranceMatchesFoundQuote": "{count}'matches' trobats en les últimes 24 hores",
-  "entranceStartButton": "Començar Palumba",
+  "entranceTitle1": "Jeżeli ten uroczy gołąb nie zachęci Cię do głosowania w czerwcu, to nic innego nie da rady.",
+  "entranceTitle2": "Swipe your opinion on topics that matter to you.",
+  "entranceTitle3": "Znajdź swój typ i dowiedz się, na kogo głosować w wyborach.",
+  "entranceMatchesFoundQuote": "{count} matchy znalezionych w ciągu ostatnich 24 godzin",
+  "entranceStartButton": "Rozpocznij Palumbę",
   "@@OnBoardingPage": "OnBoardingPage",
-  "hungary": "Hongria",
-  "denmark": "Dinamarca",
-  "germany": "Alemanya",
-  "spain": "Espanya",
-  "france": "França",
-  "poland": "Polònia",
-  "romania": "Romania",
-  "sweden": "Suècia",
-  "onBoardingStep1Title": "On votareu?",
-  "onBoardingStep1Subtitle": "No ho sé",
-  "onBoardingStep2Title": "La meva edat",
-  "onBoardingStep3Title": "El meu gènere és",
-  "onBoardingStep3Option1": "Dona",
-  "onBoardingStep3Option2": "Home",
-  "onBoardingStep3Option3": "Gènere-fluid",
-  "onBoardingStep3Option4": "No binari",
-  "onBoardingStep3Option5": "Altres",
-  "onBoardingNotAnswerButton": "Prefereix-ho no dir-ho",
-  "onBoardingCardQuestion": "No tinc ni idea de qui votar a les eleccions europees del 2024",
-  "onBoardingLastStepTitle": "Llisca en funció del teu grau d'acord",
+  "hungary": "Węgry",
+  "denmark": "Dania",
+  "germany": "Niemcy",
+  "spain": "Hiszpania",
+  "france": "Francja",
+  "poland": "Polska",
+  "romania": "Rumunia",
+  "sweden": "Szwecja",
+  "onBoardingStep1Title": "Gdzie będziesz głosować?",
+  "onBoardingStep1Subtitle": "Nie wiem",
+  "onBoardingStep2Title": "Mój wiek",
+  "onBoardingStep3Title": "Identyfikuję się jako",
+  "onBoardingStep3Option1": "Kobieta",
+  "onBoardingStep3Option2": "Mężczyzna",
+  "onBoardingStep3Option3": "Gender-fluid",
+  "onBoardingStep3Option4": "Osoba niebinarna",
+  "onBoardingStep3Option5": "Żadne z powyższych",
+  "onBoardingNotAnswerButton": "Wolę nie odpowiadać",
+  "onBoardingCardQuestion": "Nie mam pojęcia na kogo głosować w Wyborach do Parlamentu Europejskiego w 2024 roku",
+  "onBoardingLastStepTitle": "Przesuń palcem zgodnie z Twoją opinią",
   "@@LoadingResultsPage": "LoadingResultsPage",
-  "loadingResultsPageTitle1": "Els teus resultats personalitzats estan en camí :)",
-  "loadingResultsPageTitle2": "Això serà més ràpid que aconseguir entrades per Taylor Swift 👀 ",
-  "loadingResultsPageTitle3": "Trobar coincidències amb llistes de candidats a {country} 🔍",
-  "loadingResultsPageTitle4": "Quasi preparat, una darrera comprovació...",
+  "loadingResultsPageTitle1": "Twoje spersonalizowane wyniki są w drodze :)",
+  "loadingResultsPageTitle2": "Powinno być szybsze niż kupowanie biletów na Taylor Swift 👀 ",
+  "loadingResultsPageTitle3": "Szukamy matchy z listami kandydatów w {country}  🔍",
+  "loadingResultsPageTitle4": "Prawie gotowe,<br>robimy jeszcze ostatnie poprawki...",
   "@@ResultsPage": "ResultsPage",
-  "resultsPage1Title": "T'hem trobat un 'match'!",
-  "resultsPage1Text": "A les següents pantalles, descobrireu el vostre grup més compatible al Parlament de la UE, les llistes locals coincidents per votar al juny al vostre país, i fins i tot hem trobat algunes coses addicionals basades en les vostres respostes 😌",
-  "resultsLabelEmoji": "😍❤️‍🔥💘",
-  "resultsShare": "Comparteix (coming soon ⏳)",
-  "resultsPage2Title": "i tu, realment és una Love Story (EU's Version)",
-  "resultsPage2FirstText": "Esteu d'acord en un ",
-  "resultsPage2LastText": "de totes les idees que has valorat.",
-  "resultsPage3Title": "La teva compatibilitat amb els grups del Parlament Europeu",
-  "resultsPage5Title": "D'acord, és genial saber quin grup et porta...",
-  "resultsPage5Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage4TitleTop": "Pro-integració UE",
-  "resultsPage4TitleBottom": "Anti-integració UE",
-  "resultsPage4TitleLeft": "Esquerra",
-  "resultsPage4TitleRight": "Dreta",
-  "resultsPage4TitleUserHere": "Ets tu!",
-  "resultsPage6Title": "Però a les eleccions de la UE, voteu per una llista local",
-  "resultsPage6Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage7Title": "Aquestes són les llistes de candidats locals que coincideixen al vostre país",
-  "resultsPage7Disclaimer": "No estan en cap ordre en concret",
-  "resultsPage7NoLocalCandidates": "No s'ha trobat cap partit polític local a {country}",
-  "resultsPage8Title": "Vols rebre una notificació quan sigui el moment de votar?",
-  "resultsPage8NopButton": "No gràcies!",
-  "resultsPage8YesButton": "Síííí",
-  "resultsSocialShareData": "Me and {party} agreed on {percentage}% of all the statements you swiped on. Find out your match at palumba.eu",
+  "resultsPage1Title": "Match i wiele więcej 👉👈",
+  "resultsPage1Text": "Na następnych ekranach odkryjesz najbliższą Ci grupę w Parlamencie Europejskim i pasujące lokalne listy do głosowania w czerwcu w Twoim kraju. Będzie też kilka dodatkowych rzeczy, które stworzyliśmy na podstawie Twoich odpowiedzi 😌",
+  "resultsPage1Button": "Naciśnij aby kontynuować",
+  "resultsPage2_1Title": "Szczerze mówiąc, pomiędzy",
+  "resultsPage2_2Title": "a mną jest to swego rodzaju Love Story (EU’s Version)",
+  "resultsPage3Title": "Jak bardzo jest mi blisko do grup Parlamentu Europejskiego",
+  "resultsPage4TitleTop": "Pro-EU Integration",
+  "resultsPage4TitleBottom": "Przeciwko integracji europejskiej",
+  "resultsPage4TitleLeft": "Lewica",
+  "resultsPage4TitleRight": "Prawica",
+  "resultsPage4TitleUserHere": "It’s me, hi!",
+  "resultsPage5Title": "Jeśli chodzi o bardziej konkretne tematy, do których grup Parlamentu Europejskiego jest mi bliżej?",
+  "resultsPage5Topic1": "Kwestie środowiskowe",
+  "resultsPage5Topic2": "Prawa Człowieka i Prawa Socjalne",
+  "resultsPage5Topic3": "Interwencjonizm Gospodarczy",
+  "resultsPage6_1Title": "Ok, dobrze wiedzieć, która grupa mnie rozumie...",
+  "resultsPage6_2Title": "Ale w Wyborach do Parlamentu Europejskiego głosuje się na lokalną listę",
+  "resultsPage6Text": "Na następnych slajdach odkryjesz listy kandydatów w Twoim kraju, które najprowdopodbniej dołączą do Twoich matchy.",
+  "resultsPage7Title": "Kandydaci w/we {country} najbardziej zgodni z {group}",
+  "resultsPage7Disclaimer": "W losowej kolejności.",
+  "resultsPage7NoLocalCandidates": "Nie znaleziono lokalnych grup w/we {country}",
+  "resultsPage8_1Text": "On {topic}, you’re {percentage}% more into",
+  "resultsPage8_2Text": "Aktywne działania na rzecz klimatu🌱😌",
+  "resultsPage8Help": "Walczysz o klimat! Wierzysz, że walka z kryzysem klimatycznym wymaga wspólnych działań i uczynienia z niej priorytetu. Nie przeszkadzają Ci wprowadzane przez UE regulacje w stosunku do firm. Bo przecież na co komu wzrost gospodarczy, jeśli planeta przestanie być zdolna do zamieszkiwania?",
+  "resultsPage9Help": "Kliknij na karty, aby przetasować",
+  "resultsPage9Text1": "Wybory dotyczą wielu tematów, ale jest jeden, który naprawdę",
+  "resultsPage9Text2": "Belongs With Me 🫡",
+  "resultsPage10Title": "Chcesz dostać powiadomienie, gdy będzie czas na oddanie głosu?",
+  "resultsPage10NopButton": "Nie, dzięki!",
+  "resultsPage10YesButton": "Takkkk",
+  "resultsShare": "Udostępnij",
   "@HomePage": "HomePage",
-  "homePageMatchesFoundQuote": "{count} 'matches' trobats en les últimes 24 hores",
-  "homePageBackToTest": "Tornar al test",
-  "homePageMyResults": "Els meus resultats",
-  "homePageStartButton": "Comença un nou test",
+  "homePageMatchesFoundQuote": "{count} matchy znaleziono w ciągu ostatnich 24 godzin",
+  "homePageBackToTest": "Wróć do testu",
+  "homePageMyResults": "Moje wyniki",
+  "homePageStartButton": "Rozpocznij nowy test",
   "@@SettingsPage": "SettingsPage",
-  "settingsPageTitleLanguage": "Language",
-  "settingsPageSubtitleLanguage": "Prefereixo utilitzar l'app en",
-  "settingsPageTextLanguage": "Per canviar l'idioma, fes clic sobre l'actual",
-  "settingsPageTitleAbout": "Sobre nosaltres",
-  "settingsPageTextAbout": "Palumba no és una empresa, ni un partit polític, ni un govern. Som una associació independent sense ànim de lucre de més de 120 joves 🐦 d'arreu d'Europa que es van trobar l'estiu passat i van començar a crear aquesta app. Tenim un objectiu: ajudar-te a entendre millor com funcionen les eleccions europees i quines candidatures encaixen amb les vostres idees, perquè puguis votar amb més confiança a les persones que donen suport a les teves prioritats. El nostre algorisme és de codi obert, un consell científic de politòlegs ha revisat les frases en què fas \"swipe\" i les teves dades estan taaan encriptades que no tenim manera d'identificar-te ni de rebot :)",
-  "settingsPageTitleAssociation": "L'Associació",
-  "settingsPageTitlePartners": "Partners",
-  "settingsPageTextPartners": "És important que sàpigues que els Partners no tenen cap poder de decisió editorial sobre els continguts de l'app, que és una iniciativa apartidista amb un objectiu clar: ajudar-te a entendre quines opcions polítiques recolzen les teves opinions a nivell europeu i nacional.",
-  "settingsPageSubtitle1": "Main Sponsors",
-  "settingsPageSubtitle2": "European Partners",
-  "settingsPageSubtitle3": "Academic Partner",
-  "settingsPageSubtitle4": "National Institutional Partners",
-  "settingsPageSubtitle5": "Service Providers",
-  "settingsPageShareButtonText": "Compartir (coming soon ⏳)",
-  "settingsPagePrivacyPolicy": "Política de Privacitat"
+  "settingsPageTitleLanguage": "Język",
+  "settingsPageSubtitleLanguage": "Wolę używać tej aplikacji po",
+  "settingsPageTextLanguage": "Żeby zmienić język, kliknij na język aktualnie używany w aplikacji",
+  "settingsPageTitleAbout": "O aplikacji",
+  "settingsPageTextAbout": "Palumba is not a company, not a political party, not a government. We’re an independent non-profit association of 120+ young people 🐦 from all over Europe who got together last summer and started crafting this app. We have one goal: helping you understand better how the European Elections work and which candidate lists could match your ideas, so you can vote more confidently for people who support your priorities. Our algorithm is open-source, the statements you swipe on were reviewed by political scientists, and your data is sooo encrypted that we have no way to ever identify you :)",
+  "settingsPageTitleAssociation": "Stowarzyszenie",
+  "settingsPageTitlePartners": "Partnerzy",
+  "settingsPageTextPartners": "Warto podkreślić, że partnerzy nie mają żadnych uprawnień redakcyjnych w odniesieniu do treści aplikacji, która pozostaje inicjatywą bezstronną i ma jasny cel: pomagać zrozumieć, kto popiera Twoje opinie na szczeblu europejskim i krajowym.",
+  "settingsPageSubtitle1": "Sponsorzy Główni",
+  "settingsPageSubtitle2": "Partnerzy Europejscy",
+  "settingsPageSubtitle3": "Partnerzy Akademiccy",
+  "settingsPageSubtitle4": "Krajowi Partnerzy Instytucjonalni",
+  "settingsPageSubtitle5": "Dostawcy Usług",
+  "settingsPageShareButtonText": "Udostępnij",
+  "settingsPagePrivacyPolicy": "Polityka Prywatności"
 }
