--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_tr.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_tr.arb
@@ -1,96 +1,105 @@
 {
   "@@locale": "tr",
-  "appName": "Palumba EU",
+  "appName": "Palumba AB",
   "shortAppName": "Palumba",
-  "ok": "D'acord",
-  "yes": "Sí",
-  "no": "No",
-  "cancel": "Cancel·lar",
-  "textContinue": "Continuar",
-  "alertServerErrorTitle": "Vaja!",
-  "alertServerErrorText": "Alguna cosa ha anat malament al nostre costat. Siusplau, intenta-ho més tard.",
-  "skip": "Omet",
-  "neutral": "Neutral",
-  "faq": "FAQ",
+  "ok": "Tamam",
+  "yes": "Evet",
+  "no": "Hayır",
+  "cancel": "İptal",
+  "textContinue": "Devam",
+  "alertServerErrorTitle": "Ups!",
+  "alertServerErrorText": "Bizim tarafımızda bir sorun oluştu. Lütfen sonra tekrar deneyin.",
+  "skip": "Atla",
+  "neutral": "Tarafsız",
+  "faq": "SSS",
+  "@@SplashPage": "SplashPage",
+  "splashPageNoInternet": "İnternet bağlantınız yok gibi gözüküyor",
   "@@LanguagePage": "LanguagePage",
-  "languagePageTitle": "Continuem en català? :)",
-  "languagePageSubtitle": "Això es pot canviar més endavant a la configuració.",
+  "languagePageTitle": "Türkçe devam edelim mi? :)",
+  "languagePageSubtitle": "Bu sonradan ayarlardan değiştirilebilir.",
   "@@Entrance": "EntrancePage",
-  "entranceTitle1": "Benvinguts a la Beta exclusiva de Palumba",
-  "entranceTitle2": "Si aquest colom tan bufó no t'ajuda a votar al juny, res ho farà",
-  "entranceTitle3": "Prepara't per difondre l'app massivament el 9 de maig",
-  "entranceMatchesFoundQuote": "{count}'matches' trobats en les últimes 24 hores",
-  "entranceStartButton": "Començar Palumba",
+  "entranceTitle1": "Eğer bu şirin güvercin seni Haziranda oy kullanmaya ikna edemezse, hiçbir şey edemez.",
+  "entranceTitle2": "Senin için önemli olan konuların üzerini kaydır.",
+  "entranceTitle3": "Seçimlerde kime oy vereceğinle ilgili eşleşmeni ve eğilimini bul.",
+  "entranceMatchesFoundQuote": "Son 24 saatte {count} eşleşme bulundu",
+  "entranceStartButton": "Palumba'yı Başlat",
   "@@OnBoardingPage": "OnBoardingPage",
-  "hungary": "Hongria",
-  "denmark": "Dinamarca",
-  "germany": "Alemanya",
-  "spain": "Espanya",
-  "france": "França",
-  "poland": "Polònia",
-  "romania": "Romania",
-  "sweden": "Suècia",
-  "onBoardingStep1Title": "On votareu?",
-  "onBoardingStep1Subtitle": "No ho sé",
-  "onBoardingStep2Title": "La meva edat",
-  "onBoardingStep3Title": "El meu gènere és",
-  "onBoardingStep3Option1": "Dona",
-  "onBoardingStep3Option2": "Home",
-  "onBoardingStep3Option3": "Gènere-fluid",
-  "onBoardingStep3Option4": "No binari",
-  "onBoardingStep3Option5": "Altres",
-  "onBoardingNotAnswerButton": "Prefereix-ho no dir-ho",
-  "onBoardingCardQuestion": "No tinc ni idea de qui votar a les eleccions europees del 2024",
-  "onBoardingLastStepTitle": "Llisca en funció del teu grau d'acord",
+  "hungary": "Macaristan",
+  "denmark": "Danimarka",
+  "germany": "Almanya",
+  "spain": "İspanya",
+  "france": "Fransa",
+  "poland": "Polonya",
+  "romania": "Romanya",
+  "sweden": "İsveç",
+  "onBoardingStep1Title": "Nerede oy kullanacaksın?",
+  "onBoardingStep1Subtitle": "Bilmiyorum",
+  "onBoardingStep2Title": "Yaşım",
+  "onBoardingStep3Title": "Kendimi böyle tanımlıyorum",
+  "onBoardingStep3Option1": "Kadın",
+  "onBoardingStep3Option2": "Erkek",
+  "onBoardingStep3Option3": "Gender-fluid",
+  "onBoardingStep3Option4": "Non-binary",
+  "onBoardingStep3Option5": "Başka",
+  "onBoardingNotAnswerButton": "Söylememeyi tercih ederim",
+  "onBoardingCardQuestion": "2024 Avrupa Seçimlerinde kime oy vereceğimle ilgili hiçbir fikrim yok",
+  "onBoardingLastStepTitle": "Katılma durumuna göre kaydır",
   "@@LoadingResultsPage": "LoadingResultsPage",
-  "loadingResultsPageTitle1": "Els teus resultats personalitzats estan en camí :)",
-  "loadingResultsPageTitle2": "Això serà més ràpid que aconseguir entrades per Taylor Swift 👀 ",
-  "loadingResultsPageTitle3": "Trobar coincidències amb llistes de candidats a {country} 🔍",
-  "loadingResultsPageTitle4": "Quasi preparat, una darrera comprovació...",
+  "loadingResultsPageTitle1": "Sana özel sonuçların yolda :)",
+  "loadingResultsPageTitle2": "Bu Taylor Swift'e bilet almaktan daha çabuk olmalı 👀 ",
+  "loadingResultsPageTitle3": "{country} adaylar listesiyle eşleşmeler bulunuyor 🔍",
+  "loadingResultsPageTitle4": "Neredeyse hazır, son bir şey...",
   "@@ResultsPage": "ResultsPage",
-  "resultsPage1Title": "T'hem trobat un 'match'!",
-  "resultsPage1Text": "A les següents pantalles, descobrireu el vostre grup més compatible al Parlament de la UE, les llistes locals coincidents per votar al juny al vostre país, i fins i tot hem trobat algunes coses addicionals basades en les vostres respostes 😌",
-  "resultsLabelEmoji": "😍❤️‍🔥💘",
-  "resultsShare": "Comparteix (coming soon ⏳)",
-  "resultsPage2Title": "i tu, realment és una Love Story (EU's Version)",
-  "resultsPage2FirstText": "Esteu d'acord en un ",
-  "resultsPage2LastText": "de totes les idees que has valorat.",
-  "resultsPage3Title": "La teva compatibilitat amb els grups del Parlament Europeu",
-  "resultsPage5Title": "D'acord, és genial saber quin grup et porta...",
-  "resultsPage5Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage4TitleTop": "Pro-integració UE",
-  "resultsPage4TitleBottom": "Anti-integració UE",
-  "resultsPage4TitleLeft": "Esquerra",
-  "resultsPage4TitleRight": "Dreta",
-  "resultsPage4TitleUserHere": "Ets tu!",
-  "resultsPage6Title": "Però a les eleccions de la UE, voteu per una llista local",
-  "resultsPage6Text": "A les següents pantalles, descobriràs el teu grup més compatible al Parlament Europeu, les canidatures coincidents per votar al juny al teu país, i fins i tot hem trobat algunes coses més basades en les teves respostes 😌",
-  "resultsPage7Title": "Aquestes són les llistes de candidats locals que coincideixen al vostre país",
-  "resultsPage7Disclaimer": "No estan en cap ordre en concret",
-  "resultsPage7NoLocalCandidates": "No s'ha trobat cap partit polític local a {country}",
-  "resultsPage8Title": "Vols rebre una notificació quan sigui el moment de votar?",
-  "resultsPage8NopButton": "No gràcies!",
-  "resultsPage8YesButton": "Síííí",
-  "resultsSocialShareData": "Me and {party} agreed on {percentage}% of all the statements you swiped on. Find out your match at palumba.eu",
+  "resultsPage1Title": "Bir eşleşme ve çok daha fazlası 👉👈",
+  "resultsPage1Text": "Sonraki ekranlarda, Haziran ayında ülkendeki seçimlerde sana en uyumlu AB Parlemento Grubunu ve eşleşen Yerel listeyi keşfedeceksin, hatta verdiğin cevaplara göre fazladan birşeyler de bulduk 😌",
+  "resultsPage1Button": "Devam etmek için dokun",
+  "resultsPage2_1Title": "Honestly, between the",
+  "resultsPage2_2Title": "and me, it’s kind of a Love Story (EU’s Version)",
+  "resultsPage3Title": "Avrupa Parlamento Grupları'na ne kadar yakınım",
+  "resultsPage4TitleTop": "AB'ye Entegrasyon Yanlısı",
+  "resultsPage4TitleBottom": "AB'ye Entegrasyon Karşıtı",
+  "resultsPage4TitleLeft": "Sol",
+  "resultsPage4TitleRight": "Sağ",
+  "resultsPage4TitleUserHere": "It’s me, hi!",
+  "resultsPage5Title": "Daha özel konularda, hangi Avrupa Parlamento Grubu'na daha yakınım?",
+  "resultsPage5Topic1": "Çevresel sorunlar",
+  "resultsPage5Topic2": "İnsan Hakları ve Sosyal Haklar",
+  "resultsPage5Topic3": "Ekonomik müdahale",
+  "resultsPage6_1Title": "Tamamdır, hangi grubun beni anladığını bilmek güzel...",
+  "resultsPage6_2Title": "Ancak AB seçimlerinde, yerel bir listeye oy veririz",
+  "resultsPage6Text": "Sonraki ekranlarda, eşleşmene katılma ihtimali en yüksek ülkendeki aday listelerini keşfedeceksin.",
+  "resultsPage7Title": "{country}'deki adaylar {group} ile en uyumlu",
+  "resultsPage7Disclaimer": "Belirli bir sıralama yok.",
+  "resultsPage7NoLocalCandidates": "{country}'de hiçbir yerel parti bulunamadı",
+  "resultsPage8_1Text": "{topic}'de, %{percentage} daha ilgilisin;",
+  "resultsPage8_2Text": "Aktif İklim Hareketi 🌱😌",
+  "resultsPage8Help": "Sen iklim değişikliğine karşı bir savaşçısın! İklim krizinin üstesinden gelmenin, herkesin bunu en yüksek öncelik haline getirmesiyle kolektif eylem gerektirdiğine inanıyorsun. AB'nin bu amaçla şirketleri düzenlemesi senin için bir sorun değil. Sonuç olarak, gezegen yaşanmaz hale gelirse ekonomik büyüme ne işe yarar?",
+  "resultsPage9Help": "Kartları karmak için dokun",
+  "resultsPage9Text1": "Seçimler birçok konuyla ilgilidir, ancak bir tanesi var ki",
+  "resultsPage9Text2": "O Bana Aittir 🫡",
+  "resultsPage10Title": "Oy kullanma vakti geldiğinde bir bildirim?",
+  "resultsPage10NopButton": "Hayır sağ ol!",
+  "resultsPage10YesButton": "Oluuuuur",
+  "resultsShare": "Paylaş",
   "@HomePage": "HomePage",
-  "homePageMatchesFoundQuote": "{count} 'matches' trobats en les últimes 24 hores",
-  "homePageBackToTest": "Tornar al test",
-  "homePageMyResults": "Els meus resultats",
-  "homePageStartButton": "Comença un nou test",
+  "homePageMatchesFoundQuote": "Son 24 saatte {count} eşleşme bulundu",
+  "homePageBackToTest": "Teste devam",
+  "homePageMyResults": "Sonuçlarım",
+  "homePageStartButton": "Yeni bir teste başla",
   "@@SettingsPage": "SettingsPage",
-  "settingsPageTitleLanguage": "Language",
-  "settingsPageSubtitleLanguage": "Prefereixo utilitzar l'app en",
-  "settingsPageTextLanguage": "Per canviar l'idioma, fes clic sobre l'actual",
-  "settingsPageTitleAbout": "Sobre nosaltres",
-  "settingsPageTextAbout": "Palumba no és una empresa, ni un partit polític, ni un govern. Som una associació independent sense ànim de lucre de més de 120 joves 🐦 d'arreu d'Europa que es van trobar l'estiu passat i van començar a crear aquesta app. Tenim un objectiu: ajudar-te a entendre millor com funcionen les eleccions europees i quines candidatures encaixen amb les vostres idees, perquè puguis votar amb més confiança a les persones que donen suport a les teves prioritats. El nostre algorisme és de codi obert, un consell científic de politòlegs ha revisat les frases en què fas \"swipe\" i les teves dades estan taaan encriptades que no tenim manera d'identificar-te ni de rebot :)",
-  "settingsPageTitleAssociation": "L'Associació",
-  "settingsPageTitlePartners": "Partners",
-  "settingsPageTextPartners": "És important que sàpigues que els Partners no tenen cap poder de decisió editorial sobre els continguts de l'app, que és una iniciativa apartidista amb un objectiu clar: ajudar-te a entendre quines opcions polítiques recolzen les teves opinions a nivell europeu i nacional.",
-  "settingsPageSubtitle1": "Main Sponsors",
-  "settingsPageSubtitle2": "European Partners",
-  "settingsPageSubtitle3": "Academic Partner",
-  "settingsPageSubtitle4": "National Institutional Partners",
-  "settingsPageSubtitle5": "Service Providers",
-  "settingsPageShareButtonText": "Compartir (coming soon ⏳)",
-  "settingsPagePrivacyPolicy": "Política de Privacitat"
+  "settingsPageTitleLanguage": "Dil",
+  "settingsPageSubtitleLanguage": "Uygulamayı bu dilde kullanmayı tercih ederim",
+  "settingsPageTextLanguage": "Dili değiştirmek için şu anda seçili olana dokun",
+  "settingsPageTitleAbout": "Hakkında",
+  "settingsPageTextAbout": "Palumba bir şirket, bir siyasi parti veya bir hükümet değildir. Geçtiğimiz yaz 120'den fazla genç 🐦 Avrupa'nın dört bir yanından bir araya gelerek bu uygulamayı hazırlamaya başladığı, bağımsız ve kâr amacı gütmeyen bir dernektir. Tek bir amacımız var; Avrupa Seçimlerinin nasıl işlediğini ve hangi aday listelerinin senin fikirlerine uyabileceğini daha iyi anlamana yardımcı olmak, böylece önceliklerini destekleyen kişilere güvenle oy verebilirmen. Algoritmamız açık kaynaktır, üzerini kaydırdığın ifadeler de siyaset bilimciler tarafından incelenmiştir ve verilerin o kadar şifrelidir ki kimliğini saptamamızın hiçbir yolu yok :)",
+  "settingsPageTitleAssociation": "Dernek",
+  "settingsPageTitlePartners": "Ortaklar",
+  "settingsPageTextPartners": "Önemli olarak belirtelim ki ortaklarımız uygulamanın içeriği üzerinde herhangi bir editoryal yetkiye sahip değildir; bu uygulama tarafsız bir girişimdir ve net bir hedefi vardır; Avrupa ve ulusal düzeyde görüşlerinizi kimin desteklediğini anlamanıza yardımcı olmak.",
+  "settingsPageSubtitle1": "Ana Sponsorlar",
+  "settingsPageSubtitle2": "Avrupalı Ortaklar",
+  "settingsPageSubtitle3": "Akademik Ortak",
+  "settingsPageSubtitle4": "Ulusal Kurumsal Ortaklar",
+  "settingsPageSubtitle5": "Servis Sağlayıcılar",
+  "settingsPageShareButtonText": "Paylaş",
+  "settingsPagePrivacyPolicy": "Veri Koruma"
 }
