--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_de.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_de.arb
@@ -19,8 +19,8 @@
   "languagePageSubtitle": "Das kann später in den Einstellungen geändert werden.",
   "@@Entrance": "EntrancePage",
   "entranceTitle1": "Wenn diese süße Taube dir nicht helfen kann im Juni zu wählen, dann hilft dir gar nichts.",
-  "entranceTitle2": "Swipe your opinion on topics that matter to you.",
-  "entranceTitle3": "Find out your match and an orientation for who to vote for at the Elections.",
+  "entranceTitle2": "Äußere deine Meinung zu Themen, die für dich wichtig sind.",
+  "entranceTitle3": "Finde deine Übereinstimmung und eine Orientierung, wen du bei den Wahlen wählen sollst.",
   "entranceMatchesFoundQuote": "{count} gefundene Matches in den letzten 24 Stunden",
   "entranceStartButton": "Palumba starten",
   "@@OnBoardingPage": "OnBoardingPage",
