--- a/lib/utils/managers/i18n_manager/translations/l10n/intl_fr.arb
+++ b/lib/utils/managers/i18n_manager/translations/l10n/intl_fr.arb
@@ -48,7 +48,7 @@
   "loadingResultsPageTitle1": "Tes résultats personnalisés sont en route :)",
   "loadingResultsPageTitle2": "Ça devrait être plus rapide que d'obtenir des billets pour Taylor Swift 👀 ",
   "loadingResultsPageTitle3": "Recherche de matches avec les listes de candidat·es en {country} 🔍",
-  "loadingResultsPageTitle4": "Presque prêt, un dernier check...",
+  "loadingResultsPageTitle4": "Presque prêt,<br>un dernier check...",
   "@@ResultsPage": "ResultsPage",
   "resultsPage1Title": "Un match et bien plus 👉👈",
   "resultsPage1Text": "Dans les écrans suivants, tu trouveras le groupe le plus compatible avec tes idées au Parlement européen, les listes locales correspondantes dans ton pays, et nous avons même trouvé quelques infos supplémentaires à partir de tes réponses 😌",
@@ -71,9 +71,9 @@
   "resultsPage7Title": "Les listes en {country} les plus alignées avec {group}",
   "resultsPage7Disclaimer": "Dans aucun ordre particulier.",
   "resultsPage7NoLocalCandidates": "Aucune liste locale trouvée en {country}",
-  "resultsPage8_1Text": "Sur {topic}, tu es {percentage} plus pour",
+  "resultsPage8_1Text": "Sur {topic}, tu es {percentage}% plus pour",
   "resultsPage8_2Text": "Action climatique 🌱😌",
-  "resultsPage8Help": "You are a climate change fighter! You believe that tackling the climate crisis requires collective action, with everyone making it a top priority. You do not mind the EU regulating companies to that end. After all, what use is economic growth if the planet becomes inhabitable?",
+  "resultsPage8Help": "Tu es un combattant pour le climat ! Tu crois que pour lutter contre la crise climatique il faut une action collective et que chacun doit en faire sa grande priorité. Tu es favorable au fait que l'Union Européenne régule les entreprises pour aider dans cet objectif. Après tout, à quoi ça sert d'avoir de la \"croissance\" économique si la planète deviens invivable ?",
   "resultsPage9Help": "Appuie sur la carte pour en voir d'autres",
   "resultsPage9Text1": "Les élections portent sur beaucoup de sujets, mais il y a une chose qui vraiment",
   "resultsPage9Text2": "Belongs With Me 🫡",
